# kinesia

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  README.md.old  Structures.h  UI.c  UTest_session.c  connect_struct_UI.c  connect_struct_UI.h  controller.c  controller.h  gtk_functions.c  gtk_functions.h  main.c  main_UI  main_UI.c  main_UI.h  main_controller.c  main_view.c  main_view.h  patient.c  patient.h  run  seance.c  seance.h  session_controller.c  session_controller.h  session_view.c  session_view.h  sqlite3.h  structures.h
BaseDeDonnee/: Bdd.db
doc/: README.md
media/media-for-tests/: createTestPatient
src/: Makefile  UI.c  UI.h  UI_to_struct.h  UTest.c  UTest_BDD.c  UTest_BDD.h  UTest_UI.c  UTest_UI.h  connect_UI_struct.c  connect_UI_struct.h  connect_struct_UI.c  connect_struct_UI.h  editor_views.c  editor_views.h  extern_files_manager.c  extern_files_manager.h  folder.c  folder.h  home_view.c  home_view.h  main.c  patient.c  patient.h  patient_view.c  patient_view.h  seance.c  seance.h  session_controller.c  session_controller.h  session_view.c  session_view.h  struct_to_UI.c  struct_to_UI.h  structures.h  work_view.c  work_view.h
src/controler/: BDD_to_struct_folder.c  BDD_to_struct_patient.h  extern_files_manager.c  extern_files_manager.h  struct_to_BDD_folder.h  struct_to_BDD_patient.c  struct_to_BDD_patient.h  struct_to_BDD_session.c  struct_to_UI.c  struct_to_UI.h
src/controller/: BDD_to_struct_folder.c  BDD_to_struct_folder.h  BDD_to_struct_patient.c  BDD_to_struct_patient.h  BDD_to_struct_session.c  BDD_to_struct_session.h  UI_to_struct.c  UI_to_struct.h  display_helpers.c  display_helpers.h  extern_files_manager.c  extern_files_manager.h  struct_to_BDD_folder.c  struct_to_BDD_folder.h  struct_to_BDD_patient.c  struct_to_BDD_patient.h  struct_to_BDD_session.c  struct_to_BDD_session.h  struct_to_UI.c  struct_to_UI.h
src/database/: Bdd.db
src/model/: BDD_to_struct_folder.c  BDD_to_struct_folder.h  BDD_to_struct_patient.c  BDD_to_struct_patient.h  BDD_to_struct_session.c  BDD_to_struct_session.h  data.db  data_demo.db  folder_manager.c  folder_manager.h  patient_manager.c  patient_manager.h  session_manager.c  session_manager.h  structures.h
src/view/: darkMode.css  editor_views.c  editor_views.h  file_view.c  file_view.h  home_view.c  home_view.h  main_UI.c  style.css  whiteMode.css  work_view.c  work_view.h
tests/: CMakeLists.txt  Makefile  README.md  UTest.c  UTest_BDD.c  UTest_BDD.h  UTest_BDD_session.c  UTest_BDD_session.h  UTest_UI.c  UTest_UI.h  UTest_display_helpers.c  UTest_display_helpers.h  UTest_ext_files_manager.c  UTest_ext_files_manager.h  UTest_folder.c  UTest_folder.h  UTest_manager.c  UTest_manager.h  UTest_patient.c  UTest_patient.h  UTest_session.c  UTest_session.h  UTest_session_list.c  UTest_session_list.h  run_tests  test2
tests/cmake/: CodeCoverage.cmake
